# weber-connect-unofficial

./: .coverage  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  PRODUCTION_READINESS.md  README.md  SECURITY.md  hacs.json  pyproject.toml  repository.yaml  requirements-dev.in  requirements-dev.txt  requirements-runtime.txt
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  codeql-analysis.yml  github-hosted-runner-policy.yml  publish.yml
custom_components/weber_connect/: __init__.py  binary_sensor.py  bluetooth.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  models.py  options.py  repairs.py  saber_frames.py  sensor.py  state.py  strings.json  weber_cloud.py  weber_cloud_socket.py
docs/adr/: 0002-native-transport-lifecycle.md  (+1 more)
scripts/: validate_release.py
tests/: test_ble_pair_flow.py  test_bridge_contracts.py  test_cloud_flow.py  test_http_contracts.py  test_http_flow.py  test_mqtt_flow.py  test_mqtt_session.py  test_panel_contracts.py  test_panel_flow.py  test_release_validation.py  test_runtime_architecture.py  test_runtime_persistence.py  test_saber_frames_decode.py  test_scan_flow.py  test_status_bridge_flow.py  test_support_contracts.py  test_ui_contracts.py
tests_native/: test_bluetooth.py  test_cloud.py  test_cloud_http.py  test_cloud_socket.py  test_config_flow.py  test_config_flow_edges.py  test_coordinator.py  test_native_contracts.py  test_repairs.py  test_saber_frames.py
weber_connect_ble/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  config.yaml
(+16 files in other folders)
