[project]
name = "weber-connect-unofficial"
version = "3.0.0"
requires-python = ">=3.14"

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "ASYNC", "RUF"]
ignore = ["ASYNC109", "ASYNC110"]

[tool.ruff.lint.per-file-ignores]
"tests_native/*.py" = ["B017"]

[tool.mypy]
python_version = "3.14"
files = ["custom_components/weber_connect"]
strict = true
ignore_missing_imports = true
warn_unreachable = true
show_error_codes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests_native"]

[tool.coverage.run]
branch = true
source = ["custom_components/weber_connect"]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_also = [
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
